# keylexbundles

./: .gitignore  LICENSE  README.md  key lexical bundles.py  pyproject.toml
keylexbundles/: __init__.py  __main__.py  compute_keyness.py
