[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keylexbundles"
version = "0.1.2"
description = "Compute key lexical bundles (4-grams) keyness between a target corpus and a reference corpus."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Taehyeong (Terry) Kim", email= "tk654@nau.edu"}]

# No external deps: using stdlib only
dependencies = []

[project.urls]
Homepage = "https://github.com/taehyeongterrykim/keylexbundles"
PyPI = "https://pypi.org/project/keylexbundles/"

[project.scripts]
# installs a console command `keylexbundles` that calls main()
keylexbundles = "keylexbundles.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["keylexbundles*"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Text Processing :: Linguistic"
]